# actix-web_my_test

./: .env  .gitignore  Cargo.toml  README.md
webservice/: Cargo.toml
webservice/src/: errors.rs  router.rs  state.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
